--- a/.github/workflows/daily-selenium-download.yml
+++ b/.github/workflows/daily-selenium-download.yml
@@ -1,10 +1,12 @@
+name: Selenium demo
+
 on:
   schedule:
-    - cron: '0 8 * * *' # ejecuta cada día a las 08:00 UTC
+    - cron: '0 8 * * *' # cada día a las 08:00 UTC
   workflow_dispatch: {}
 
 jobs:
-  run-download:
+  run-login:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,27 +16,18 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
+          which chromium-browser
+          chromium-browser --version
+          which chromedriver
+          chromedriver --version
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install Python packages
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run selenium script
+      - name: Run Selenium login script
         env:
           CHROME_BIN: /usr/bin/chromium-browser
-        run: |
-          echo "Using CHROME_BIN=$CHROME_BIN"
-          export CHROME_BIN=/usr/bin/chromium-browser
-          python scripts/selenium_login_and_download.py
-
-      - name: Upload downloaded file as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: demo-downloaded-file
-          path: /tmp/*
+          CHROMEDRIVER_PATH: /usr/bin/chromedriver
+        run: python scripts/selenium_login_only.py
